# extend-inplace

./: .gitignore  README.md  extend_inplace.py  pypi_readme.md  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini  txt_readme.txt
.github/workflows/: tests.yaml
src/extend_inplace/: __init__.py  main.py
tests/: __init__.py  test_extend.py
