[build-system]
# requires: list of packages needed to build my package
requires = ["setuptools>=42.0", "wheel"]
# build-backend: name of the python object that frontends use to perform build
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=extend_inplace -s --doctest-modules --cov-fail-under=85"
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true