[metadata]
name = extend_inplace
description = Extend classes inplace
author = Ryan Young
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Environment :: Console
	Operating System :: OS Independent
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering

[options]
packages =
    extend_inplace

python_requires = >= 3.10
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
extend_inplace = py.typed

[flake8]
max-line-length = 160